<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="50dp"
    tools:context=".activity.SignInSignUpActivity">

    <LinearLayout
        android:id="@+id/ll_signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:id="@+id/tv_username_title"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/titleColor" />

        <EditText
            android:visibility="gone"
            android:layout_marginTop="12dp"
            android:id="@+id/et_username_in"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:hint="@string/username_hint"
            android:textColorHint="@color/titleColor"
            android:textColor="@color/titleColor"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/titleColor" />

        <EditText
            android:layout_marginTop="12dp"
            android:id="@+id/et_email_in"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:hint="@string/username_hint"
            android:textColorHint="@color/titleColor"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/tv_pass_title"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/titleColor"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_marginTop="12dp"
            android:id="@+id/et_pass_in"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/titleColor"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/btn_signin"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            style="@style/btn_style"
            android:background="@drawable/my_button"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_bottom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?   "
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/tv_bottom_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>